[Creativity style] Fixed rendering problems on Safari

--- a/mod_image_show_gk4/styles/gk_creativity/style.css
+++ b/mod_image_show_gk4/styles/gk_creativity/style.css
@@ -24,6 +24,7 @@
 }
 
 .gkIsWrapper-gk_creativity .figure {
+	-webkit-backface-visibility: hidden;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
